# library-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _cmakelists.py  _continuous_integration.py  _imgui_ini.py  _include.py  _license.py  _main.py  _readme.py  _setup.py  _src.py  _tests.py  _utils.py  setup.py
.github/workflows/: build_and_run_tests.yml
src/: mylib.cpp
tests/: CMakeLists.txt  tests.cpp
